# telePainting

./: README.md  mobility-lab.code-workspace
3DScanService/: .gitignore  RubberSheet.pcd  calibrate.pcd  calibration.py  connect.py  make_calibration_point_cloud.py  scan_function.py  service.py  utility.py
3DScanService/config/: calibrate.json  config.json  fr.json  rl.json  setup.json
Driver/: Dockerfile  generate.py  main.py  plan.py  robot.py  start.sh
Driver/controllers/: AngleController.py  ControllerBase.py  PositionController.py  SpeedController.py  TrajectoryController.py
TeensyFirmware/: platformio.ini
nodedriver/: .gitignore  package.json  tsconfig.json
simulator/: .gitignore  package.json  webpack.config.js
web-service/: .prettierrc  .umirc.ts  package.json
ws_moveit/: Dockerfile  build.sh  start.sh  test.sh
ws_moveit/src/ar4srdf0/: .setup_assistant  CMakeLists.txt  package.xml
ws_moveit/src/ar4srdf0/config/: ar4.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
ws_moveit/src/ar4srdf0/launch/: ar4_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ws_moveit/src/ar4srdf0/src/: service.py
(+113 files in other folders)
